--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build Docker image
-      run: docker build --file ".\src\Nounbase.Console.GenMap\Dockerfile" -t ghcr.io/${{ github.repository }}/genmap:latest .
+      run: docker build --file "/src/Nounbase.Console.GenMap/Dockerfile" -t ghcr.io/${{ github.repository }}/genmap:latest .
 
     - name: Push Docker image
       run: docker push ghcr.io/${{ github.repository }}/genmap:latest
