--- a/src/Nounbase.Console.GenMap/Dockerfile
+++ b/src/Nounbase.Console.GenMap/Dockerfile
@@ -8,14 +8,14 @@ WORKDIR /app
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
+WORKDIR /dockersrc
 COPY ["Nounbase.Console.GenMap/Nounbase.Console.GenMap.csproj", "Nounbase.Console.GenMap/"]
 COPY ["../Nounbase.Core/Nounbase.Core.csproj", "Nounbase.Core/"]
 COPY ["../Nounbase.Services.SqlServer/Nounbase.Services.SqlServer.csproj", "Nounbase.Services.SqlServer/"]
 COPY ["../Nounbase.Services/Nounbase.Services.csproj", "Nounbase.Services/"]
 RUN dotnet restore "./Nounbase.Console.GenMap/Nounbase.Console.GenMap.csproj"
 COPY . .
-WORKDIR "/src/Nounbase.Console.GenMap"
+WORKDIR "/dockersrc/Nounbase.Console.GenMap"
 RUN dotnet build "./Nounbase.Console.GenMap.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
